// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem Should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="todo-item"
      >
        <p
          class=""
        >
          Eat dinner
        </p>
        <div
          class="action-button "
        >
          <button
            class="button is-remove-btn"
          >
            <img
              alt="label"
              src="trash.png"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="todo-item"
    >
      <p
        class=""
      >
        Eat dinner
      </p>
      <div
        class="action-button "
      >
        <button
          class="button is-remove-btn"
        >
          <img
            alt="label"
            src="trash.png"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TodoList Should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="todo-list"
      >
        <div
          class="todo-item"
        >
          <p
            class=""
          >
            Clean apartment
          </p>
          <div
            class="action-button "
          >
            <button
              class="button is-remove-btn"
            >
              <img
                alt="label"
                src="trash.png"
              />
            </button>
          </div>
        </div>
        <div
          class="todo-item"
        >
          <p
            class="is-strike-through"
          >
            Do laundry
          </p>
          <div
            class="action-button "
          >
            <button
              class="button is-remove-btn"
            >
              <img
                alt="label"
                src="trash.png"
              />
            </button>
          </div>
        </div>
        <div
          class="todo-item"
        >
          <p
            class=""
          >
            Vacuum floor
          </p>
          <div
            class="action-button "
          >
            <button
              class="button is-remove-btn"
            >
              <img
                alt="label"
                src="trash.png"
              />
            </button>
          </div>
        </div>
        <div
          class="todo-item"
        >
          <p
            class="is-strike-through"
          >
            Feed cat
          </p>
          <div
            class="action-button "
          >
            <button
              class="button is-remove-btn"
            >
              <img
                alt="label"
                src="trash.png"
              />
            </button>
          </div>
        </div>
        <div
          class="todo-item"
        >
          <p
            class=""
          >
            Change light bulbs
          </p>
          <div
            class="action-button "
          >
            <button
              class="button is-remove-btn"
            >
              <img
                alt="label"
                src="trash.png"
              />
            </button>
          </div>
        </div>
        <div
          class="todo-item"
        >
          <p
            class="is-strike-through"
          >
            Go to Store
          </p>
          <div
            class="action-button "
          >
            <button
              class="button is-remove-btn"
            >
              <img
                alt="label"
                src="trash.png"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="todo-list"
    >
      <div
        class="todo-item"
      >
        <p
          class=""
        >
          Clean apartment
        </p>
        <div
          class="action-button "
        >
          <button
            class="button is-remove-btn"
          >
            <img
              alt="label"
              src="trash.png"
            />
          </button>
        </div>
      </div>
      <div
        class="todo-item"
      >
        <p
          class="is-strike-through"
        >
          Do laundry
        </p>
        <div
          class="action-button "
        >
          <button
            class="button is-remove-btn"
          >
            <img
              alt="label"
              src="trash.png"
            />
          </button>
        </div>
      </div>
      <div
        class="todo-item"
      >
        <p
          class=""
        >
          Vacuum floor
        </p>
        <div
          class="action-button "
        >
          <button
            class="button is-remove-btn"
          >
            <img
              alt="label"
              src="trash.png"
            />
          </button>
        </div>
      </div>
      <div
        class="todo-item"
      >
        <p
          class="is-strike-through"
        >
          Feed cat
        </p>
        <div
          class="action-button "
        >
          <button
            class="button is-remove-btn"
          >
            <img
              alt="label"
              src="trash.png"
            />
          </button>
        </div>
      </div>
      <div
        class="todo-item"
      >
        <p
          class=""
        >
          Change light bulbs
        </p>
        <div
          class="action-button "
        >
          <button
            class="button is-remove-btn"
          >
            <img
              alt="label"
              src="trash.png"
            />
          </button>
        </div>
      </div>
      <div
        class="todo-item"
      >
        <p
          class="is-strike-through"
        >
          Go to Store
        </p>
        <div
          class="action-button "
        >
          <button
            class="button is-remove-btn"
          >
            <img
              alt="label"
              src="trash.png"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
